initial UI changes related to skydive topology UI
Change-Id: Idc3f3de7d08b1a1ca25a27272036ad34952be051
Partial-Bug: #SOFTID-201
Signed-off-by: Sergey Glazyrin <s.glazyrin@partner.samsung.com>

--- a/statics/index.html
+++ b/statics/index.html
@@ -32,6 +32,7 @@
   <script src="/statics/js/vendor/vue.min-2.5.16.js"></script>
   <script src="/statics/js/vendor/vue-router.min-2.2.1.js"></script>
   <script src="/statics/js/vendor/vuex.min-2.1.2.js"></script>
+  <script src="/statics/js/vendor/vue-select.js"></script>
   <script src="/statics/js/vendor/bootstrap.min.3.3.5.js"></script>
 
   <script src="/statics/js/vendor/bootstrap-3.3.7.min.js"></script>
@@ -46,6 +47,7 @@
 
   <script src="/statics/js/utils.js"></script>
 
+  <script src="/statics/js/components/topologypackage.js"></script>
   <script src="/statics/js/bundle.js"></script>
   <script src="/statics/js/api.js"></script>
   <script src="/statics/js/websocket.js"></script>
@@ -87,6 +89,7 @@
   <script src="/statics/js/components/layout.js"></script>
   <script src="/statics/js/components/graph-layout.js"></script>
   <script src="/statics/js/components/topology.js"></script>
+  <script src="/statics/js/components/topology_new_approach.js"></script>
 
   <!-- UI config -->
   <script>
